style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;   
}


/* Tags */
h1 {
    font-size: 7vh;
}

h5, h6 {
    color: darkgray;
    font-weight: lighter;
}

a {
    color: orange;
}

a:hover {
    color: orange;
}

a:link, 
a:visited,
a:hover,
a:active { 
    text-decoration: none; 
}
    
}
.btn-success {
   
    background-color: black;
    border: 0px;
}

.btn-success:hover {
    background-color: orange;
}

.highlight {
    color: orange;
    font-weight: bolder;
}

.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
    outline: none;
    border: none;
    box-shadow: none;
}
.work-cta { 
    transition: all 0.4s;
}

.work-cta:hover {
    padding-left: 10px;
    transition: all 0.4s;
  }
  
.logo {
    height: 5vh;
}
  

/* HERO */
#hero {
    background-image: url("./images/hero.jpg");
    background-repeat: no-repeat;
    position: relative;
    margin-top: 5vh;
    background-size: cover;
    background-position: center;
}
#hero-container {
    max-width: 1580px;
    height: 100vh;
    width: 97%; /* width of hero */
    display: flex;
    flex-direction: row;
    align-items:flex-end;
    
}

#intro-row {
    margin-bottom: 10vh;
    bottom: 0;
    left: 0;
}

#intro-text {
   
    width: 100%;
    overflow: hidden;
}

#p-container {
    width: 97%; /* width of hero */
    max-width: 1580px;
}

#section-header {
    margin-bottom: 5vh;
}

.p-box {
    max-width: 1580px;
    margin-top: 5vh;
    padding: 1vh;
    background-color: black;
    overflow: hidden;
    border-left: black solid 5px;
    border-right: black solid 5px;
    margin-bottom: 10vh;
}

/* Project Gallery */
.proj-img {
    width: 100%;
    overflow: hidden;
    position: relative;
  }
  
  .image {
    display: block;
    width: 100%;
    height: auto;
  }
  
  .overlay {
    position: absolute;
    bottom: 100%;
    left: 0;
    right: 0;
    background: linear-gradient(to top, transparent 0%, black);
    overflow: hidden;
    width: 100%;
    height: 0;
    transition: .5s ease;
  }
  
  .proj-img:hover .overlay {
    top: 0;
    height: 20%;
  }
  
  .text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 45%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
  }
 
/* About */
.about-me-container {
    margin-bottom: 10vh;
}

.about-image {
    width: 35%;
}

.about-text {
    margin-left: -10px;
}

.contact-form {
    margin-bottom: 5vh;
}

.tagline-card {
    display: flex;
    align-items: flex-start;
    margin-top: -1rem;
    text-align: right;
}

.profile-card {
    text-align: left;
    display: flex;
    align-items: flex-start;
    
    text-align: left;
}


/* MAP */

.g-map {
    
    display: flex;
    justify-content: center;  
    align-items: center;
    margin-bottom: 10vh;
}

.g-map iframe {
    display: block;
}

.icons {
    display: flex;
    justify-content: center;
    align-items: center;
}

.icons i{
    color: white;
}

.icons i:hover {
    color: orange;
}

/* Images */
img {
    position: relative;
    height: 50%;
    filter: grayscale(1);
}

img:hover {
    filter: grayscale(0);
}

.img-text {
    position: absolute;
    left: 0;
    top: 0;
    color: white;
}

footer {
    
    background-color: black;
}

/* Media Queries (Small) */
@media (max-width: 576px) {
    #intro-text {
        width: 100%;
    }

    h1 {
        font-size: 2.5rem;
    }
    
    .tag-line {
        text-align: center;
    }
    
    .about-text {
        text-align: center;
    }

    .profile-card {
        margin-top: -5vh;
    }

}

/* Animation for text */

@keyframes fadeInUp {
    from {
        transform: translate3d(0,40px,0)
    }

    to {
        transform: translate3d(0,0,0);
        opacity: 1
    }
}

@-webkit-keyframes fadeInUp {
    from {
        transform: translate3d(0,40px,0)
    }

    to {
        transform: translate3d(0,0,0);
        opacity: 1
    }
}

.animated {
    animation-duration: 1s;
    animation-fill-mode: both;
    -webkit-animation-duration: 1s;
    -webkit-animation-fill-mode: both
}

.animatedFadeInUp {
    opacity: 0
}

.fadeInUp {
    opacity: 0;
    animation-name: fadeInUp;
    -webkit-animation-name: fadeInUp;
}

/* Fade in animation */
.hideme
{
    opacity:0;
}

.fade-in {
    visibility: visible;
    opacity: 1;
    transition: opacity 0.1s linear;
  }

.fade-out {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s 0.3s, opacity 0.3s linear;
  }

